Updated information on "Work in progress" page

--- a/index.html
+++ b/index.html
@@ -103,11 +103,16 @@
       <p class="lead">Our website is currently under development.</p>
       <div class="spacer" aria-hidden="true"></div>
       <div class="links" aria-label="Contact links">
-        <a class="link" href="mailto:englishwithizabelasliz@gmail.com"
-          >📧 <span class="muted">englishwithizabelasliz@gmail.com</span></a
-        >
         <a class="link" href="tel:572004360"
           >📞 <span class="muted">572 004 360</span></a
+        >
+        <a
+          class="link"
+          href="https://www.google.com/maps/place//data=!4m2!3m1!1s0x471fff855cf2c729:0x5f3b9c035098664b?sa=X&ved=1t:8290&ictx=111"
+          >📍 <span class="muted">Bałtycka 2A, 15-521 Zaścianki</span></a
+        >
+        <a class="link" href="mailto:englishwithizabelasliz@gmail.com"
+          >📧 <span class="muted">englishwithizabelasliz@gmail.com</span></a
         >
         <a
           class="link"
