Updated text on "Work in progress" page

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <body>
     <main class="card" role="main" aria-labelledby="site-title">
       <h1 id="site-title">English with Izabela</h1>
-      <p class="lead">Our website is currently under development.</p>
+      <p class="lead">Strona jest w trakcie budowy</p>
       <div class="spacer" aria-hidden="true"></div>
       <div class="links" aria-label="Contact links">
         <a class="link" href="tel:572004360"
